fix:Photo aligned in About page #9

--- a/client/src/pages/About/About.css
+++ b/client/src/pages/About/About.css
@@ -21,6 +21,7 @@
 .about img {
   border-radius: 100%;
   max-width: 10rem;
+  margin: auto;
 }
 
 
